--- a/index.css
+++ b/index.css
@@ -47,3 +47,19 @@
 	height: auto;
 
 }
+
+.iframe {
+  position: relative;
+  overflow: hidden;
+  width: 80%;
+}
+
+/*.responsive-iframe{
+	position: absolute;
+ 	top: 0;
+ 	left: 0;
+ 	bottom: 0;
+ 	right: 0;
+ 	width: 100%;
+ 	height: 100%;
+}*/
