--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-*{
++*{
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
@@ -48,10 +48,10 @@
 
 }
 
-.iframe {
+#iframe {
   position: relative;
   overflow: hidden;
-  width: 80%;
+  width: 100%;
 }
 
 /*.responsive-iframe{
@@ -63,3 +63,18 @@
  	width: 100%;
  	height: 100%;
 }*/
+
+#form{
+	width: 90%;
+}
+
+#form button{
+	background-color: royalblue;
+	color: white;
+	font-weight: 400;
+	border: none;
+}
+
+#form #fullName, #form #contactNumber, #form #emailAdd, #form #siteMessage {
+	border: 2px solid royalblue;
+}
